--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,14 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.6.0'
     compile 'com.google.firebase:firebase-auth:9.6.0'
 
+
+
     compile 'com.android.support:design:25.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-//    compile 'com.jakewharton:butterknife:8.5.1'
-//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'io.reactivex:rxjava:1.0.4'
+    compile 'io.reactivex:rxandroid:0.24.0'
 
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
